<resources>
    <string name="app_name">Koing</string>
    <string name="bar_default">주문할 메뉴를 선택해주세요.</string>
    <string name="tab1">2.라멘</string>
    <string name="tab2">3.일식/양식</string>
    <string name="tab3">4.한식/덮밥</string>
    <string name="tab4">5.분식</string>
    <string name="tab5">7.오늘의메뉴</string>
    <string name="btn_order">Order</string>
    <string name="btn_mypage">MyPage</string>
    <string name="menu_name">메뉴 이름</string>
    <string name="menu_price">0,000원</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ko_ing">Ko-ing</string>

    <string name="order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
