<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/manager_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="관리자 계정"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/MainColor"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/tab_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab4" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab5" />
    </com.google.android.material.tabs.TabLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/MainColor"
                android:layout_margin="0.5dp"
                android:text="메뉴이름"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/MainColor"
                android:layout_margin="0.5dp"
                android:text="가격"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/MainColor"
                android:layout_margin="0.5dp"
                android:text="품절"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/MainColor"
                android:layout_margin="0.5dp"
                android:text="삭제"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/MainColor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="5dp"
                android:layout_margin="0.5dp"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:text="메뉴이름"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="5dp"
                android:layout_margin="0.5dp"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:text="0,000원"/>

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:buttonTint="@color/MainColor"
                android:gravity="center"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:buttonTint="@color/MainColor"
                android:gravity="center"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="상품 등록" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="로그아웃" />
    </LinearLayout>


</LinearLayout>